@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Fixed a bug with the CSV export of the ground motion fields
   * Fixed a bug with the export of UHS curves with `--exports=xml`
   * Reduced substantially the data transfer and the memory occupation
     for event based calculations with a large number of assets: we
